third_party/jerryscript/jerryscript/tests/jerry/fail/1/labelled-statements-duplicate-label.js
// SPDX-FileCopyrightText: 2015 Samsung Electronics Co., Ltd.
// SPDX-License-Identifier: Apache-2.0

a: a: for (var i = 0; i < 10; i++)
{
  break a;
}
